// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DevUILayout tests Snapshot test with Processing disabled 1`] = `
<div>
  <div
    class="pf-c-page pf-m-resize-observer pf-m-breakpoint-default pf-m-height-breakpoint-sm kogito-consoles-common--PageLayout"
    data-ouia-component-type="page"
    data-ouia-safe="true"
  >
    <div
      aria-hidden="false"
      class="pf-c-page__sidebar pf-m-expanded"
      data-ouia-navigation="true"
      data-testid="page-sidebar"
      id="page-sidebar"
    >
      <div
        class="pf-c-page__sidebar-body"
      >
        <nav
          aria-label="Nav"
          class="pf-c-nav"
          data-ouia-component-id="OUIA-Generated-Nav-2"
          data-ouia-component-type="PF4/Nav"
          data-ouia-safe="true"
        >
          <ul
            class="pf-c-nav__list"
          >
            <li
              class="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-8"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-c-nav__link"
                data-ouia-navigation-name="audit-nav"
                href="/Audit"
              >
                Audit investigation
              </a>
            </li>
          </ul>
        </nav>
      </div>
    </div>
    <main
      class="pf-c-page__main"
      data-ouia-main="true"
      id="main-content-page-layout-default-nav"
      tabindex="-1"
    />
  </div>
</div>
`;

exports[`DevUILayout tests Snapshot test with Tracing disabled 1`] = `
<div>
  <div
    class="pf-c-page pf-m-resize-observer pf-m-breakpoint-default pf-m-height-breakpoint-sm kogito-consoles-common--PageLayout"
    data-ouia-component-type="page"
    data-ouia-safe="true"
  >
    <div
      aria-hidden="false"
      class="pf-c-page__sidebar pf-m-expanded"
      data-ouia-navigation="true"
      data-testid="page-sidebar"
      id="page-sidebar"
    >
      <div
        class="pf-c-page__sidebar-body"
      >
        <nav
          aria-label="Nav"
          class="pf-c-nav"
          data-ouia-component-id="OUIA-Generated-Nav-3"
          data-ouia-component-type="PF4/Nav"
          data-ouia-safe="true"
        >
          <ul
            class="pf-c-nav__list"
          >
            <li
              class="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-9"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-c-nav__link"
                data-ouia-navigation-name="processes-nav"
                href="/Processes"
              >
                Workflows
              </a>
            </li>
            <li
              class="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-10"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-c-nav__link"
                data-ouia-navigation-name="jobs-management-nav"
                href="/JobsManagement"
              >
                Jobs
              </a>
            </li>
            <li
              class="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-11"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-c-nav__link"
                data-ouia-navigation-name="task-inbox-nav"
                href="/TaskInbox"
              >
                Tasks
              </a>
            </li>
            <li
              class="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-12"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-c-nav__link"
                data-ouia-navigation-name="forms-list-nav"
                href="/Forms"
              >
                Forms
              </a>
            </li>
            <li
              class="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-13"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-c-nav__link"
                data-ouia-navigation-name="monitoring-nav"
                href="/Monitoring"
              >
                Monitoring
              </a>
            </li>
            <li
              class="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-14"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-c-nav__link"
                data-ouia-navigation-name="customDashboard-nav"
                href="/CustomDashboard"
              >
                Dashboards
              </a>
            </li>
          </ul>
        </nav>
      </div>
    </div>
    <main
      class="pf-c-page__main"
      data-ouia-main="true"
      id="main-content-page-layout-default-nav"
      tabindex="-1"
    />
  </div>
</div>
`;

exports[`DevUILayout tests Snapshot test with default props 1`] = `
<div>
  <div
    class="pf-c-page pf-m-resize-observer pf-m-breakpoint-default pf-m-height-breakpoint-sm kogito-consoles-common--PageLayout"
    data-ouia-component-type="page"
    data-ouia-safe="true"
  >
    <div
      aria-hidden="false"
      class="pf-c-page__sidebar pf-m-expanded"
      data-ouia-navigation="true"
      data-testid="page-sidebar"
      id="page-sidebar"
    >
      <div
        class="pf-c-page__sidebar-body"
      >
        <nav
          aria-label="Nav"
          class="pf-c-nav"
          data-ouia-component-id="OUIA-Generated-Nav-1"
          data-ouia-component-type="PF4/Nav"
          data-ouia-safe="true"
        >
          <ul
            class="pf-c-nav__list"
          >
            <li
              class="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-1"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-c-nav__link"
                data-ouia-navigation-name="processes-nav"
                href="/Processes"
              >
                Workflows
              </a>
            </li>
            <li
              class="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-2"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-c-nav__link"
                data-ouia-navigation-name="jobs-management-nav"
                href="/JobsManagement"
              >
                Jobs
              </a>
            </li>
            <li
              class="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-3"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-c-nav__link"
                data-ouia-navigation-name="task-inbox-nav"
                href="/TaskInbox"
              >
                Tasks
              </a>
            </li>
            <li
              class="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-4"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-c-nav__link"
                data-ouia-navigation-name="forms-list-nav"
                href="/Forms"
              >
                Forms
              </a>
            </li>
            <li
              class="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-5"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-c-nav__link"
                data-ouia-navigation-name="monitoring-nav"
                href="/Monitoring"
              >
                Monitoring
              </a>
            </li>
            <li
              class="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-6"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-c-nav__link"
                data-ouia-navigation-name="customDashboard-nav"
                href="/CustomDashboard"
              >
                Dashboards
              </a>
            </li>
            <li
              class="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-7"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-c-nav__link"
                data-ouia-navigation-name="audit-nav"
                href="/Audit"
              >
                Audit investigation
              </a>
            </li>
          </ul>
        </nav>
      </div>
    </div>
    <main
      class="pf-c-page__main"
      data-ouia-main="true"
      id="main-content-page-layout-default-nav"
      tabindex="-1"
    />
  </div>
</div>
`;
